# vtrs20

./: Cargo.toml  README.md  opcodes.md
emulator/: Cargo.toml
emulator/src/: asci.rs  bus.rs  disasm.rs  dma.rs  lib.rs  prt.rs  ram.rs  rom.rs  sdcard.rs  types.rs
emulator/src/cpu/: alu.rs  alu16.rs  block.rs  ctrl.rs  dispatch.rs  enums.rs  iops.rs  ld_16bit.rs  ld_8bit.rs  mmu.rs  mod.rs  reg.rs  rot.rs  special.rs  stack.rs
emulator/tests/: zexdoc.rs  zexdoc.src
src/: board.rs  bus.rs  main.rs  ram.rs  types.rs
src/cpu/: alu.rs  alu16.rs  ctrl.rs  dispatch.rs  enums.rs  iops.rs  ld_16bit.rs  ld_8bit.rs  mmu.rs  mod.rs  special.rs  stack.rs
zexrunner/: Cargo.toml
zexrunner/src/: lib.rs
zextest/: Cargo.toml
zextest/src/: lib.rs
zextest/tests/: smoke.rs
