[package]
name = "vtrs20"
version = "0.1.0"
authors = ["Byron Ellacott <code@bje.id.au>"]
edition = "2018"

[workspace]
members = [ "zextest", "emulator", "zexrunner" ]

[[bin]]
name = "vtrs20"
path = "src/main.rs"

[dependencies]
bitflags = "1.2.1"
emulator = { path = "emulator" }
clap = "2.33.3"
bitstream-io = "0.8.5"
termion = "1.5.5"
