[package]
name = "emulator"
version = "0.1.0"
authors = ["Byron Ellacott <code@bje.id.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

[dev-dependencies]
zexrunner = { path = "../zexrunner" }
zextest = { path = "../zextest" }
