[package]
name = "zexrunner"
version = "0.1.0"
authors = ["Byron Ellacott <code@bje.id.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0.18"
syn = "1.0.31"
emulator = { path = "../emulator" }
